# cough_detection

./: .gitignore  DATASETS.md  README.md  app.py  audio_processing.py  check_dataset.py  classifier.py  coughvid_loader.py  evaluate_models.py  feature_extraction.py  fusion.py  pyproject.toml  report_generator.py  requirements.txt  run.bat  run.ps1  sample_questionnaire.json  train_models.py  train_on_coughvid.py
