[project]
name = "cough-ai"
version = "0.1.0"
description = "Cough-Based Respiratory Screening System"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "librosa>=0.10.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.0",
    "streamlit>=1.28.0",
    "soundfile>=0.12.0",
    "scipy>=1.11.0",
    "pandas>=2.0.0",
    "ffmpeg>=1.4",
]

[project.scripts]
cough-ai = "app:main"

[tool.uv]
dev-dependencies = []
